# PlantOS

./: .env.example  .gitignore  Dockerfile  DockerfileRelease  GUIDELINES.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: lifespan.py  main.py
app/api/: deps.py  router.py
app/api/v1/: health.py  ingest.py  plants.py  router.py
app/core/: config.py  database.py  factory.py  logging.py  protocols.py
app/health/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
app/ingestion/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
app/plant/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
app/static/: manifest.json
app/templates/: base.html  catalog.html  dashboard.html  health_timeline.html  plant_detail.html
app/ui/: repository.py  routes.py  schemas.py  service.py
tests/: conftest.py  test_health_service.py  test_ingestion.py  test_plant_api.py  test_plant_service.py  test_repositories.py  test_services_misc.py  test_ui_routes.py
